Add local .py grad desc regression outline

--- a/ADSA_SupervisedLearning_091618/Solutions/Simple_Linear_Regression_Solution.ipynb
+++ b/ADSA_SupervisedLearning_091618/Solutions/Simple_Linear_Regression_Solution.ipynb
@@ -16,6 +16,19 @@
   "cells": [
     {
       "metadata": {
+        "id": "zayVykoz6zYZ",
+        "colab_type": "text"
+      },
+      "cell_type": "markdown",
+      "source": [
+        "# Solution to Simple Linear Regression\n",
+        "As part of the UIUC Association of Data Science and Analytics Advanced Workshop Series - Intro to Supervised Learning Session.\n",
+        "\n",
+        "Presented and developed by Sarah Khan, Rohan Tikmany, and Bailey Tincher on September 16th, 2018."
+      ]
+    },
+    {
+      "metadata": {
         "id": "psF2H9weGPQR",
         "colab_type": "code",
         "colab": {}
